--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^4.4.0",
     "@supabase/supabase-js": "^2.97.0",
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
